--- a/css/style.css
+++ b/css/style.css
@@ -46,18 +46,26 @@ h6 {
 .smallscreen {
   display: none;
 }
-.content {
+.contenido {
   font-size: 1.875rem;
   color: #262626;
   background-size: 49% auto;
   background-attachment: fixed;
   background-repeat: no-repeat;
+  text-align: justify;
 }
-.separator {
+.separador {
   font-size: 1.875rem;
-  padding: 1.618em 0;
+  padding:0;
   text-align: center;
 }
+
+.separador_small {
+  font-size: 1.5em;
+  padding: 0rem 1em;
+  text-align: left;
+}
+
 .right {
   padding: 1.618em 6.472em 3.236em 50%;
   background-position: 0 50%;
@@ -66,31 +74,31 @@ h6 {
   padding: 1.618em 50% 3.236em 6.472em;
   background-position: 100% 50%;
 }
-.illustration_01 {
-  background-color: #00c17b;
-  background-image: url("../images/minipadwhite.png");
+.img_01 {
+  background-color: #60C0D8;
+  background-image: url("../images/hd_blush.png");
 }
-.illustration_02 {
+.img_02 {
   background-color: #e8697b;
-  background-image: url("../images/minipadblack.png");
+  background-image: url("../images/girl.png");
 }
-.illustration_03 {
+.img_03 {
   background-color: #14b29a;
-  background-image: url("../images/miniwhite.png");
+  background-image: url("../images/makeup.png");
 }
-.illustration_04 {
-  background-color: #80b9f1;
-  background-image: url("../images/miniblack.png");
+.img_04 {
+  background-color: #F1A080;
+  background-image: url("../images/model.png");
 }
 @media (max-width: 106.25rem) {
   .wrapper,
-  .separator {
+  .separador {
     font-size: 1.6875rem;
   }
 }
 @media (max-width: 93.75rem) {
-  .content,
-  .separator {
+  .contenido,
+  .separador {
     font-size: 1.5rem;
   }
   .right {
@@ -101,8 +109,8 @@ h6 {
   }
 }
 @media (max-width: 81.25rem) {
-  .content,
-  .separator {
+  .contenido,
+  .separador {
     font-size: 1.3125rem;
   }
   .right {
@@ -117,8 +125,8 @@ h6 {
   }
 }
 @media (max-width: 68.75rem) {
-  .content,
-  .separator {
+  .contenido,
+  .separador {
     font-size: 1.125rem;
   }
   .right {
