--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,255 +1,168 @@
-@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
-
+* {
+  box-sizing: border-box;
+}
+html {
+  font-size: 1em;
+  font-family: 'Roboto';
+  background-color: #262626;
+  color: #d9d9d9;
+}
 body {
-  padding:50px;
-  font:14px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#777;
-  font-weight:300;
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
 }
-
-h1, h2, h3, h4, h5, h6 {
-  color:#222;
-  margin:0 0 20px;
-}
-
-p, ul, ol, table, pre, dl {
-  margin:0 0 20px;
-}
-
-h1, h2, h3 {
-  line-height:1.1;
-}
-
-h1 {
-  font-size:28px;
-}
-
-h2 {
-  color:#393939;
-}
-
-h3, h4, h5, h6 {
-  color:#494949;
-}
-
-a {
-  color:#39c;
-  font-weight:400;
-  text-decoration:none;
-}
-
-a small {
-  font-size:11px;
-  color:#777;
-  margin-top:-0.6em;
-  display:block;
-}
-
-.wrapper {
-  width:860px;
-  margin:0 auto;
-}
-
-blockquote {
-  border-left:1px solid #e5e5e5;
-  margin:0;
-  padding:0 0 0 20px;
-  font-style:italic;
-}
-
-code, pre {
-  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-  color:#333;
-  font-size:12px;
-}
-
-pre {
-  padding:8px 15px;
-  background: #f8f8f8;  
-  border-radius:5px;
-  border:1px solid #e5e5e5;
-  overflow-x: auto;
-}
-
-table {
-  width:100%;
-  border-collapse:collapse;
-}
-
-th, td {
-  text-align:left;
-  padding:5px 10px;
-  border-bottom:1px solid #e5e5e5;
-}
-
-dt {
-  color:#444;
-  font-weight:700;
-}
-
-th {
-  color:#444;
-}
-
 img {
-  max-width:100%;
+  max-width: 100%;
+  height: auto;
+}
+h1,h2,h3,h4,h5,h6 {
+  font-family: 'Roboto';
+  line-height: 1.313em;
+}
+h1 {
+  font-size: 3em;
+  margin: 0.563em 0;
+}
+h2 {
+  font-size: 2.25em;
+  margin: 0.625em 0;
+}
+h3 {
+  font-size: 1.5em;
+  margin: 1.313em 0;
+}
+h4 {
+  font-size: 1.313em;
+  margin: 1.313em 0;
+}
+h5 {
+  font-size: 1.125em;
+  margin: 1.313em 0;
+}
+h6 {
+  font-size: 1em;
+  margin: 0.75em 0;
+}
+.smallscreen {
+  display: none;
+}
+.contenido {
+  font-size: 1.875rem;
+  color: #262626;
+  background-size: 49% auto;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  text-align: justify;
+}
+.separador {
+  font-size: 1.875rem;
+  padding:0;
+  text-align: center;
 }
 
-header {
-  width:270px;
-  float:left;
-  position:fixed;
+.separador_small {
+  font-size: 1.5em;
+  padding: 0rem 1em;
+  text-align: left;
 }
 
-header ul {
-  list-style:none;
-  height:40px;
-  
-  padding:0;
-  
-  background: #eee;
-  background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
-  background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
-  
-  border-radius:5px;
-  border:1px solid #d2d2d2;
-  box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
-  width:270px;
+.right {
+  padding: 1.618em 6.472em 3.236em 50%;
+  background-position: 0 50%;
 }
-
-header li {
-  width:89px;
-  float:left;
-  border-right:1px solid #d2d2d2;
-  height:40px;
+.left {
+  padding: 1.618em 50% 3.236em 6.472em;
+  background-position: 100% 50%;
 }
-
-header ul a {
-  line-height:1;
-  font-size:11px;
-  color:#999;
-  display:block;
-  text-align:center;
-  padding-top:6px;
-  height:40px;
+.img_01 {
+  background-color: #60C0D8;
+  background-image: url("../images/hd_blush.png");
 }
-
-strong {
-  color:#222;
-  font-weight:700;
+.img_02 {
+  background-color: #e8697b;
+  background-image: url("../images/girl.png");
 }
-
-header ul li + li {
-  width:88px;
-  border-left:1px solid #fff;
+.img_03 {
+  background-color: #14b29a;
+  background-image: url("../images/makeup.png");
 }
-
-header ul li + li + li {
-  border-right:none;
-  width:89px;
+.img_04 {
+  background-color: #F1A080;
+  background-image: url("../images/model.png");
 }
-
-header ul a strong {
-  font-size:14px;
-  display:block;
-  color:#222;
+@media (max-width: 106.25rem) {
+  .wrapper,
+  .separador {
+    font-size: 1.6875rem;
+  }
 }
-
-section {
-  width:500px;
-  float:right;
-  padding-bottom:50px;
+@media (max-width: 93.75rem) {
+  .contenido,
+  .separador {
+    font-size: 1.5rem;
+  }
+  .right {
+    padding: 1.618em 4.854em 1.618em 50%;
+  }
+  .left {
+    padding: 1.618em 50% 1.618em 4.854em;
+  }
 }
-
-small {
-  font-size:11px;
+@media (max-width: 81.25rem) {
+  .contenido,
+  .separador {
+    font-size: 1.3125rem;
+  }
+  .right {
+    padding: 1.618em 3.236em 1.618em 45%;
+    background-size: 44% auto;
+    background-position: 0 55%;
+  }
+  .left {
+    padding: 1.618em 45% 1.618em 3.236em;
+    background-size: 44% auto;
+    background-position: 100% 55%;
+  }
 }
-
-hr {
-  border:0;
-  background:#e5e5e5;
-  height:1px;
-  margin:0 0 20px;
+@media (max-width: 68.75rem) {
+  .contenido,
+  .separador {
+    font-size: 1.125rem;
+  }
+  .right {
+    padding: 1.618em 3.236em 1.618em 40%;
+    background-size: 39% auto;
+    background-position: 0 60%;
+  }
+  .left {
+    padding: 1.618em 40% 1.618em 3.236em;
+    background-size: 39% auto;
+    background-position: 100% 60%;
+  }
 }
-
-footer {
-  width:270px;
-  float:left;
-  position:fixed;
-  bottom:50px;
+@media (max-width: 50rem) {
+  .smallscreen {
+    display: block;
+  }
+  .right {
+    padding: 1.618em 3.236em;
+    background-image: none;
+  }
+  .left {
+    padding: 1.618em 3.236em;
+    background-image: none;
+  }
 }
-
-@media print, screen and (max-width: 960px) {
-  
-  div.wrapper {
-    width:auto;
-    margin:0;
-  }
-  
-  header, section, footer {
-    float:none;
-    position:static;
-    width:auto;
-  }
-  
-  header {
-    padding-right:320px;
-  }
-  
-  section {
-    border:1px solid #e5e5e5;
-    border-width:1px 0;
-    padding:20px 0;
-    margin:0 0 20px;
-  }
-  
-  header a small {
-    display:inline;
-  }
-  
-  header ul {
-    position:absolute;
-    right:50px;
-    top:52px;
-  }
+@media (max-width: 31.25rem) {
+  .right {
+    padding: 1.618em 1.618em;
+  }
+  .left {
+    padding: 1.618em 1.618em;
+  }
 }
-
-@media print, screen and (max-width: 720px) {
-  body {
-    word-wrap:break-word;
-  }
-  
-  header {
-    padding:0;
-  }
-  
-  header ul, header p.view {
-    position:static;
-  }
-  
-  pre, code {
-    word-wrap:normal;
-  }
-}
-
-@media print, screen and (max-width: 480px) {
-  body {
-    padding:15px;
-  }
-  
-  header ul {
-    display:none;
-  }
-}
-
-@media print {
-  body {
-    padding:0.4in;
-    font-size:12pt;
-    color:#444;
-  }
+@media (max-width: 12rem) {
+  html {
+    min-width: 12rem;
+  }
 }
