--- a/css/styles.css
+++ b/css/styles.css
@@ -11,9 +11,9 @@ body {
 margin: 0;
 font-family: 'Roboto', sans-serif;
 }
-img {
-max-width: 100%;
-height: auto;
+.img_01 {
+background-color: #60C0D8;
+background-image: url("../images/hd_blush.png");
 }
 h1,h2,h3,h4,h5,h6 {
 font-family: 'Roboto';
