styles almost done

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,13 +53,13 @@ color: #1498A3;
 text-decoration: none;
 }
 
+
 #project_info ul {
 list-style-type: none;
 position: fixed;
-width: 34%;
-right: 0;
+width: 415px;
+right: -5px;
 top: 4px;
-
 }
 
 #project_info ul a{
@@ -180,6 +180,26 @@ background-image: url("../images/model.png");
     padding: 1.618em 3.236em;
     background-image: none;
    }
+   
+
+  #project_info ul {
+  list-style-type: none;
+  position: fixed;
+  width: auto;
+  right: -5px;
+  top: 16px;
+}
+
+  #project_info ul a {
+  color: #11C3D3;
+  text-decoration: none;
+  float: none;
+  padding: 10px;
+  background: white;
+  border-bottom: 1px solid #565656;
+  display: block;
+}
+
 }
 @media (max-width: 31.25rem) {
   .right {
